2006-02-26 Jim Garlick <garlick@speakeasy.net>

  * src/Makefile: fix link line for r5005.

2006-02-17 Jim Garlick <garlick@speakeasy.net>

  * gpib-utils.spec: Update for Fedora packaging guidlines.

2006-02-13 Jim Garlick <garlick@speakeasy.net>

  * src/hpcrc.[ch]: New. CRC algorithm for hp1630. [Adam Goldman]

  * src/gpib.c: in gpib_ibrd(), remove EOI assertion, continue reading until 
    EOI or zero ibcnt.

  * src/gpib.c: in gpib_ibwrt(), continue on a short read.

  * src/hp1630.c: verify CRC on save/restore of learn strings.

  * src/hptodino.c: verify CRC on read of learn string.

2006-02-09 Jim Garlick <garlick@speakeasy.net>

  * src/util.[ch]: New.

  * src/hp1630.c: Use read_all(), write_all() instead of getchar(), fread(),
    and fwrite() for save/restore/print.

  * src/hp1630.c: Cleanup save/restore functions.  
    - Check learn string length.  
    - Restore learn strings to the analyzer individually, checking
      status byte 4 on each restore.  
    - Display learn string cmd+lengths on save.

  * src/gpib.c: in gpib_ibrd(), assert that EOI is set.

2006-02-08 Jim Garlick <garlick@speakeasy.net>

  * src/hp1630.c: Add clear entry before date set [Adam Goldman]

2005-12-09 Jim Garlick <garlick@speakeasy.net>

  * src/*h: some gratuitous reformatting of text.

  * src/tek2230.c: New.

2005-12-01 Jim Garlick <garlick@speakeasy.net>

  * src/hp3455.c: Cleanup (make it like hp3457).

  * src/r5005.c: Cleanup (make it like hp3457).

  * src/dg535.c: New.

  * src/gpib.[ch]: New (factored).

2005-11-28 Jim Garlick <garlick@speakeasy.net>

  * src/errstr.[ch]: factored code from r5005.c and hp1630.c.

  * src/hp1630.c: Cleanup.
    - Add -c (clear), -l (local), and -v (verbose) options.
    - Remove -d (date), -r (reset) options.  Actually folded these into -c.
    - Changed short opt for --save-config from -c to -C
    - Moved table of sb4 errors to hp1630.h and removed #defines.
    - Restored _ibclr() function.
